--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -312,7 +312,7 @@ reward:
   QR_code:
     - itemlist:
         img: /img/wechat.jpg
-        text: 微信
+        text: 微信支付
     - itemlist:
         img: /img/alipay.jpg
         text: 支付宝
