--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -301,8 +301,8 @@ Flink:
   headline: 友情链接
   info_headline: 我的Blog资料
   name: Blog 名字： Niko
-  address: Blog 地址： http://nikoyu.asia
-  avatar: Blog 头像：http://nikoyu.asia/img/avatarx.png
+  address: Blog 地址： https://nikoyu.asia
+  avatar: Blog 头像：https://nikoyu.asia/img/avatarx.png
   info: Blog 简介： 人生苦短,及时行乐。
   
 
@@ -519,7 +519,7 @@ translate:
   #延迟时间,若不在前, 要设定延迟翻译时间, 如100表示100ms,默认为0
   translateDelay: 0
   #博客网址
-  cookieDomain: "http://www.nikoyu.asia"
+  cookieDomain: "https://www.nikoyu.asia"
   #當文字是簡體時，按鈕顯示的文字
   msgToTraditionalChinese: "简"
   #當文字是繁體時，按鈕顯示的文字
