add music aside

--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -537,7 +537,7 @@ darkmode:
 # autoChangeMode: 1  跟隨系統而變化，不支持的瀏覽器/系統將按照時間晚上6點到早上6點之間切換為 dark mode
 # autoChangeMode: 2  只按照時間晚上6點到早上6點之間切換為 dark mode
 # autoChangeMode: false 取消自動切換
-autoChangeMode: false
+autoChangeMode: 4
 
 ####    other     ####
 #------------------------------------------------
@@ -610,6 +610,10 @@ Open_Graph_meta: true
 # 数字雨
 Cording_Rain: true
 # Cording_Rain: false
+
+# 播放器
+aplayer:
+ enable: true
 
 # CDN
 # 網站必須
