--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-wordcount": "^6.0.1"
   }
 }
