--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -14,7 +14,8 @@ menu:
     - 音乐 || /music/ || fa fa-music
     - 书籍 || /books/ || fa fa-book
   标签: /tags/ || fa fa-tags
-  目录: /categories/ || fa fa-folder-open    
+  目录: /categories/ || fa fa-folder-open   
+  工具箱 : /tool/ || fas fa-tools
   留言板:  /guestbook/ || fa fa-comments
   友链: /link/ || fa fa-link
   关于我: /about/ || fa fa-heart
@@ -636,7 +637,8 @@ CDN_USE:
     - /js/third-party/FunnyTitle.js   # 网站标题恶搞
     - /js/third-party/DigitalRain.js  # 数字雨
     - /js/third-party/font_size.js  # 彩色滚动字体
-    - /js/third-party/weather.js  # 天气控件
+    # - /js/third-party/weather.js  # 天气控件
+    - /js/third-party/clock.js  # 新年倒数
     - /js/vallingControl.js  # 自定义JQ （show-hide、load more）
    
     - /js/utils.js
