--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Niko Yu Blog
-subtitle: 个人小站，欢迎光临 (#^.^#)
+subtitle: 人生苦短，及时行乐
 description: 肥宅
 keywords: IT SSR 黑科技 程序员 web
 author: Niko Yu
