--- a/_config.yml
+++ b/_config.yml
@@ -114,8 +114,8 @@ deploy:
 ##douban
 douban:
   user: nikoyu
-  builtin: true  
-  # builtin: false 
+  # builtin: true  
+  builtin: false 
   movie:
     title: '人生就是一场轮回' 
     quote: 'Wheel of life' 
@@ -169,3 +169,12 @@ fields:
 aplayer:
   meting: true
   asset_inject: false
+
+
+# # hexo-tag-cloud
+# tag_cloud:
+#     textFont: Trebuchet MS, Helvetica
+#     textColor: '#333'
+#     textHeight: 25
+#     outlineColor: '#E2E1D1'
+#     maxSpeed: 0.1
