--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-tag-aplayer": "^3.0.4",
+    "hexo-tag-cloud": "^2.0.11",
     "hexo-wordcount": "^6.0.1"
   }
 }
