--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,7 @@ deploy:
     # - https://github.com/yujiajie01/yujiajie01.github.io.git
     # - git@git.coding.net:hezhou/hezhou.coding.me.git
     - git@e.coding.net:nikoyu/nikoyu.coding.me.git
+    - git@gitee.com:nikoyu/nikoyu.git  
     # - https://e.coding.net/nikoyu/nikoyu.coding.me.git  
   branch: master
 
