add home title-pic

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 
 # Site
 title: Niko Yu Blog
+titlePic: https://cdn.jsdelivr.net/gh/yujiajie01/imgHosting/yujiajie01-picnikoyu.png
 subtitle: 人生苦短，及时行乐
 description: 肥宅
 keywords: IT SSR 黑科技 程序员 web
