--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "5.1.1"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "global": "^4.4.0",
+    "hexo": "^5.1.1",
     "hexo-baidu-url-submit": "^0.0.6",
+    "hexo-cli": "^4.2.0",
     "hexo-deployer-git": "^2.0.0",
     "hexo-douban": "^1.1.3",
     "hexo-generator-archive": "^1.0.0",
